fix not responsive grid table text

--- a/styles/style.css
+++ b/styles/style.css
@@ -208,12 +208,10 @@ li {
 }
 
 .grid__table {
-	width: 50%;
+	width: fit-content;
 	height: fit-content;
 
 	display: grid;
-	align-content: center;
-	justify-content: center;
 	grid-template-columns: repeat(2, 50%);
 	grid-template-rows: repeat(3, 100px);
 
@@ -225,13 +223,14 @@ li {
 	width: 100%;
 	height: 100%;
 
-	text-align: center;
-
 	border-right: 2px solid var(--second-clr);
 	border-bottom: 2px solid var(--second-clr);
 }
 
 .grid__span {
+	width: fit-content;
+	height: fit-content;
+
 	display: block;
 	padding: 10px;
 	margin-top: 5px;
@@ -328,5 +327,9 @@ footer {
 
 	.img__wrapper {
 		display: none;
+	}
+
+	.nav__area {
+		top: -1px;
 	}
 }
